--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -38,10 +38,11 @@ javac.classpath=\
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
+javac.external.vm=false
 javac.processorpath=\
     ${javac.classpath}
-javac.source=1.8
-javac.target=1.8
+javac.source=1.7
+javac.target=1.7
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -62,7 +63,7 @@ main.class=de.tmahr.eap.extractor.EapExtractor
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=default_platform
+platform.active=JDK_1.7
 project.EapModel=../EapModel
 reference.EapModel.jar=${project.EapModel}/dist/EapModel.jar
 run.classpath=\
